--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,12 @@ header {
   z-index: 10;
   width: 100%;
   height: 100%;
-  touch-action: none;
+  touch-action: none;   /* disable panning/zooming */
+  -ms-touch-action: none; /* IE/Edge */
+  user-select: none;    /* prevent text selection */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 #toolbar {
